<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mediendesign</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="profile_button_string">Profil</string>
    <string name="wiedergabe_button_string">Wiedergabe</string>
    <string name="einstellungen_button_string">Einstellungen</string>
    <string name="sound_button_string">Sound</string>
    <string name="freunde_button_string">freunde</string>
    <string name="geraete_button_string">geräte</string>
    <string name="shazam_button_string">Shazam</string>
    <string name="settings_header_string">Einstellungen</string>
    <string name="bass_string">Bass</string>
    <string name="laut_string">Lautstärke</string>
    <string name="high_string">Höhen</string>
    <string name="equalizer_string">Equalizer</string>
    <string name="WLAN">WLAN</string>
    <string name="WLANconnecting">Verbindungen suchen</string>
    <string name="textviewBrightness">Helligkeit einstellen</string>
    <string name="textviewLanguage">Sprache auswählen</string>
    <string name="textviewTime">Zeit einstellen</string>
    <string name="textviewDate">Datum einstellen</string>
    <string name="dialogHeader">Verbindung wählen</string>
    <string name="test">Album Cover Artist Title</string>
    <string-array name="language_array">
        <item>deutch</item>
        <item>english</item>
        <item>français</item>
        <item>Italiano</item>
        <item>español</item>
        <item>polski</item>
        <item>português</item>
        <item>ру́сский</item>
        <item>汉语 [漢語]</item>
    </string-array>

    <string name="title_activity_radio">RadioActivity</string>

</resources>