<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/blueBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="173dp" >

        <RelativeLayout
            android:id="@+id/seekbar"
              
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/settings_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"
                android:text="@string/settings_header_string"
                android:textSize="25sp" />

            <SeekBar
                android:id="@+id/seekbarLaut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/settings_header"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="25dp"
                android:max="100"
                android:minWidth="500dp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/textviewLaut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/seekbarLaut"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"
                android:text="@string/laut_string"
                android:textSize="18sp" />

            <SeekBar
                android:id="@+id/seekbarEqualizer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textviewLaut"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="35dp"
                android:max="100"
                android:minWidth="500dp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/textviewEqualizer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/seekbarEqualizer"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"
                android:text="@string/equalizer_string"
                android:textSize="18sp" />

            <SeekBar
                android:id="@+id/seekbarBass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textviewEqualizer"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="35dp"
                android:max="100"
                android:minWidth="500dp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/textviewBass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/seekbarBass"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"
                android:text="@string/bass_string"
                android:textSize="18sp" />

            <SeekBar
                android:id="@+id/seekbarHigh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textviewBass"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="35dp"
                android:max="100"
                android:minWidth="500dp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/textviewHigh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/seekbarHigh"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"
                android:text="@string/high_string"
                android:textSize="18sp" />
        </RelativeLayout>
    </ScrollView>

</HorizontalScrollView>